--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ crashlytics-build.properties
 # Log files can be ignored.
 fmod_editor.log
 Prototype 3/ProjectSettings/Packages/
+
+Lesson 2/.idea/
